Update bootstrap URL

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>
       Download original files from the Plex web interface
     </title>
-    <link rel="stylesheet" href="/plxdwnld/bootstrap.min.css" />
-    <link rel="stylesheet" href="/plxdwnld/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="/bootstrap.min.css" />
+    <link rel="stylesheet" href="/bootstrap-theme.min.css" />
 
     <style>
       div.container {
