Make urls relative

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>
       Download original files from the Plex web interface
     </title>
-    <link rel="stylesheet" href="/bootstrap.min.css" />
-    <link rel="stylesheet" href="/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="bootstrap.min.css" />
+    <link rel="stylesheet" href="bootstrap-theme.min.css" />
 
     <style>
       div.container {
@@ -79,7 +79,7 @@
       <h2>
         Screenshot
       </h2>
-      <img src="/plexwebscreen.jpg" class="img-responsive" alt="Plex web interface" />
+      <img src="plexwebscreen.jpg" class="img-responsive" alt="Plex web interface" />
     </div>
   </body>
 </html>
