--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </title>
     <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="bootstrap-theme.min.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <style>
       div.container {
@@ -50,7 +52,7 @@
             class="btn btn-primary btn-sm"
             role="button"
             aria-pressed="true"
-            >&#x1f4be; Open In VLC</a
+            >Open In VLC</a
           >
         </li>
       </ol>
