--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li>
           Drag this button to your bookmarks bar:
           <a
-            href="javascript:(function()%7Bif%20(typeof%20plxDwnld%20%3D%3D%20'undefined')%20%7Bconst%20jsCode%20%3D%20document.createElement('script')%3BjsCode.setAttribute('src'%2C%20'https%3A%2F%2Fbanrobert.github.io%2Fplex-open-in-vlc%2Fbookmarklet.js%3Fts%3D'%20%2B%20Math.floor(Date.now()%2F1000))%3Bdocument.body.appendChild(jsCode)%3B%7D%20else%20%7BplxDwnld.init(true)%3B%7D%7D)()"
+            href="javascript:(function()%7Bif%20(typeof%20openInVlc%20%3D%3D%20'undefined')%20%7Bconst%20jsCode%20%3D%20document.createElement('script')%3BjsCode.setAttribute('src'%2C%20'https%3A%2F%2Fbanrobert.github.io%2Fplex-open-in-vlc%2Fbookmarklet.js%3Fts%3D'%20%2B%20Math.floor(Date.now()%2F1000))%3Bdocument.body.appendChild(jsCode)%3B%7D%20else%20%7BopenInVlc()%3B%7D%7D)()"
             class="btn btn-primary btn-sm"
             role="button"
             aria-pressed="true"
