--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
       </h1>
 
       <p>
-        This is a bookmarklet that will open the current media from a Plex web interface in VLC for streaming. As VLC
-        doesn't have a builtin handler for the vlc:// protocol an additional application is needed to be installed for
-        that first.
+        This bookmarklet copies the download URL to clipboard - for easy usage with a download manager.
       </p>
 
       <p>
